url&templates setting finish

--- a/RestaurantShare/shareRes/templates/shareRes/index.html
+++ b/RestaurantShare/shareRes/templates/shareRes/index.html
@@ -211,7 +211,7 @@
                                 <h1>Category <small class="subTitle">상세내용을 보려면 클릭하세요.</small></h1>
                             </div>
                             <div class="categoryAddDiv">
-                                    <a href="categoryAdd/" class="categoryAddBtn btn btn-info" role="button">+</a>
+                                    <a href="categoryCreate/" class="categoryAddBtn btn btn-info" role="button">+</a>
                             </div>
                         </div>
                         
@@ -271,7 +271,7 @@
             
                             </ul>
                         </ul>
-                        <a href="restaurantAdd/" class="sendBtn btn btn-info" role="button">맛집 추가하기</a>
+                        <a href="restaurantCreate/" class="sendBtn btn btn-info" role="button">맛집 추가하기</a>
                     </div>
                     <div class="emailDiv">
                         <div class="emailHeaderDiv">
