category Create&Read finish

--- a/RestaurantShare/shareRes/templates/shareRes/categoryCreate.html
+++ b/RestaurantShare/shareRes/templates/shareRes/categoryCreate.html
@@ -81,18 +81,27 @@
         <div class="content">
             
                 <div class="inputDiv">
-                    <div class="input-group">
-                        <span class="input-group-addon" style="border:1px solid #ccc; border-radius: 4px;">기본 그룹</span>
-                    </div>
-
+                    {% for category in categories %}
+                    {% if category.id == 3%}
+                        <div class="input-group">
+                            <span class="input-group-addon" style="border:1px solid #ccc; border-radius: 4px;">{{ category.category_name }}</span>
+                        </div>
+                    {% endif %}
+                    {% endfor %}
+                    
+                    {% for category in categories %}
+                    {% if category.id != 3 %}
                     <form action="" method="POST">{% csrf_token %}
                         <div class="input-group">
-                            <span class="input-group-addon" id="" style="border:1px solid #ccc; border-radius: 4px;">한식</span>
+                            <span class="input-group-addon" id="" style="border:1px solid #ccc; border-radius: 4px;">{{category.category_name}}</span>
+                            <input type="hidden" name="categoryId" id="categoryId" value="{{category.id}}"/>
                             <input type="submit" class="resAddBtn btn btn-danger" role="button" value="삭제"/>
                         </div>
                     </form>
+                    {% endif %}
+                    {% endfor %}
 
-                    <form action="" method="GET" onsubmit="return categoryAddCheckFrom();">
+                    <form action="./create" method="POST" onsubmit="return categoryAddCheckFrom();">{% csrf_token %}
                         <div class="input-group">
                             <input type="submit" class="resAddBtn btn btn-success" role="button" value="추가"/>
                             <input id="categoryName" name="categoryName" type="text" class="form-control" placeholder="추가할 카테고리명을 입력하세요." style="width:650px; float:right; border-radius:4px;">
