--- a/RestaurantShare/shareRes/templates/shareRes/index.html
+++ b/RestaurantShare/shareRes/templates/shareRes/index.html
@@ -216,7 +216,8 @@
                         </div>
                         
                         <ul class="restaurantListDiv nav nav-pills nav-stacked">
-                            <li class="category deactive">한식</li>
+                            {% for category in categories %}
+                            <li class="category deactive">{{ category.category_name}}</li>
                             <ul class="restaurantList">
 
                                 <div class="input-group">
@@ -234,42 +235,7 @@
                                 </div>
 
                             </ul>
-                            <li class="category deactive">중식</li>
-                            <ul class="restaurantList">
-                                
-                                <div class="input-group">
-                                    <span class="input-group-addon">
-                                        <input name="check3" id="check3" type="checkbox">
-                                    </span>
-                                    <a href="restaurantDetail/3"><input name="res3" id="res3" type="text" class="form-control" disabled style="cursor: pointer;" value="1"></a>
-                                </div>
-
-                                <div class="input-group">
-                                    <span class="input-group-addon">
-                                        <input name="check4" id="check4" type="checkbox">
-                                    </span>
-                                    <a href="restaurantDetail/4"><input name="res4" id="res4" type="text" class="form-control" disabled style="cursor: pointer;" value="2"></a>
-                                </div>
-
-                            </ul>
-                            <li class="category deactive">일식</li>
-                            <ul class="restaurantList">
-                                
-                                <div class="input-group">
-                                    <span class="input-group-addon">
-                                        <input name="check5" id="check5" type="checkbox">
-                                    </span>
-                                    <a href="restaurantDetail/5"><input name="res5" id="res5" type="text" class="form-control" disabled style="cursor: pointer;" value="1"></a>
-                                </div>
-
-                                <div class="input-group">
-                                    <span class="input-group-addon">
-                                        <input name="check6" id="check6" type="checkbox">
-                                    </span>
-                                    <a href="restaurantDetail/6"><input name="res6" id="res6" type="text" class="form-control" disabled style="cursor: pointer;" value="2"></a>
-                                </div>
-            
-                            </ul>
+                            {% endfor %}
                         </ul>
                         <a href="restaurantCreate/" class="sendBtn btn btn-info" role="button">맛집 추가하기</a>
                     </div>
