category CRUD finish

--- a/RestaurantShare/shareRes/templates/shareRes/categoryCreate.html
+++ b/RestaurantShare/shareRes/templates/shareRes/categoryCreate.html
@@ -91,7 +91,7 @@
                     
                     {% for category in categories %}
                     {% if category.id != 3 %}
-                    <form action="" method="POST">{% csrf_token %}
+                    <form action="./delete" method="POST">{% csrf_token %}
                         <div class="input-group">
                             <span class="input-group-addon" id="" style="border:1px solid #ccc; border-radius: 4px;">{{category.category_name}}</span>
                             <input type="hidden" name="categoryId" id="categoryId" value="{{category.id}}"/>
