restaurant main read done

--- a/RestaurantShare/shareRes/templates/shareRes/index.html
+++ b/RestaurantShare/shareRes/templates/shareRes/index.html
@@ -220,19 +220,16 @@
                             <li class="category deactive">{{ category.category_name}}</li>
                             <ul class="restaurantList">
 
+                                {% for restaurant in restaurants %}
+                                {% if restaurant.category == category %}
                                 <div class="input-group">
                                     <span class="input-group-addon">
-                                        <input name="check1" id="check1" type="checkbox">
+                                        <input name="check{{restaurant.id}}" id="check{{restaurant.id}}" type="checkbox">
                                     </span>
-                                    <a href="restaurantDetail/1"><input name="res1" id="res1" type="text" class="form-control" disabled style="cursor: pointer;" value="1"></a>
+                                    <a href="restaurantDetail/{{restaurant.id}}"><input name="res{{restaurant.id}}" id="res{{restaurant.id}}" type="text" class="form-control" disabled style="cursor: pointer;" value="{{restaurant.restaurant_name}}"></a>
                                 </div>
-
-                                <div class="input-group">
-                                    <span class="input-group-addon">
-                                        <input name="check2" id="check2" type="checkbox">
-                                    </span>
-                                    <a href="restaurantDetail/2"><input name="res2" id="res2" type="text" class="form-control" disabled style="cursor: pointer;" value="2"></a>
-                                </div>
+                                {% endif %}
+                                {% endfor %}
 
                             </ul>
                             {% endfor %}
