--- a/RestaurantShare/shareRes/templates/shareRes/restaurantCreate.html
+++ b/RestaurantShare/shareRes/templates/shareRes/restaurantCreate.html
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="content">
-            <form action="./Create" method="POST" onsubmit="return checkFrom();">{% csrf_token %}
+            <form action="./create" method="POST" onsubmit="return checkFrom();">{% csrf_token %}
                 <div class="inputDiv">
                     <div class="input-group">
                         <span class="input-group-addon" id="sizing-addon2">카테고리</span>
