--- a/RestaurantShare/shareRes/templates/shareRes/restaurantUpdate.html
+++ b/RestaurantShare/shareRes/templates/shareRes/restaurantUpdate.html
@@ -56,7 +56,7 @@
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous">
     </script>
-    <title>맛집 추가하기</title>
+    <title>맛집 수정하기</title>
     <script>
         function checkFrom(){
             if ($('#resTitle').val().length <= 0){
@@ -85,35 +85,45 @@
     <div class="container">
         <div class="header">
             <div class="jumbotron">
-                <h1>맛집 상세보기</h1>
+                <h1>맛집 수정하기</h1>
                 <p>made by Django</p>
             </div>
         </div>
         <div class="content">
-            <div class="inputDiv">
-                <div class="input-group">
-                    <span class="input-group-addon" id="sizing-addon2">카테고리</span>
-                    <input id="resCategory" name="resCategory" type="text" class="form-control" disabled value="{{restaurant.category.category_name}}">
+            <form action="./update" method="POST" onsubmit="return checkFrom();">{% csrf_token %}
+                <div class="inputDiv">
+                    <div class="input-group">
+                        <span class="input-group-addon" id="sizing-addon2">카테고리</span>
+                        <select id="resCategory" name="resCategory" class="resCategory" size="1" required autofocus>
+                            {% for category in categories %}
+                            {% if category == restaurant.category %}
+                            <option value="{{category.id}}" selected>{{category.category_name}}</option>
+                            {% else %}
+                            <option value="{{category.id}}">{{category.category_name}}</option>
+                            {% endif %}
+                            {% endfor %}
+                        </select>  
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon" id="sizing-addon2">맛집 이름</span>
+                        <input id="resTitle" name="resTitle" type="text" class="form-control" placeholder="맛집 이름을 입력해주세요." aria-describedby="sizing-addon2" value="{{restaurant.restaurant_name}}">
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon" id="sizing-addon2">관련 링크</span>
+                        <input id="resLink" name="resLink" type="text" class="form-control" placeholder="관련 링크를 입력해주세요." aria-describedby="sizing-addon2" value="{{restaurant.restaurant_link}}">
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon" id="sizing-addon2">상세 내용</span>
+                        <textarea id="resContent" name="resContent" cols="90" rows="10" placeholder="상세 내용을 입력해주세요.">{{restaurant.restaurant_content}}</textarea>
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon" id="sizing-addon2">장소 키워드</span>
+                        <input id="resLoc" name="resLoc" type="text" class="form-control" placeholder="장소 키워드를 입력해주세요." aria-describedby="sizing-addon2" value="{{restaurant.restaurant_keyword}}">
+                    </div>
+                    <input type="hidden" id="resId" name="resId" value="{{restaurant.id}}"/>
+                    <input type="submit" class="resAddBtn btn btn-info" role="button" value="맛집 수정!"/>
                 </div>
-                <div class="input-group">
-                    <span class="input-group-addon" id="sizing-addon2">맛집 이름</span>
-                    <input id="resTitle" name="resTitle" type="text" class="form-control" disabled value="{{restaurant.restaurant_name}}">
-                </div>
-                <div class="input-group">
-                    <span class="input-group-addon" id="sizing-addon2">관련 링크</span>
-                    <input id="resLink" name="resLink" type="text" class="form-control" disabled value="{{restaurant.restaurant_link}}">
-                </div>
-                <div class="input-group">
-                    <span class="input-group-addon" id="sizing-addon2">상세 내용</span>
-                    <textarea id="resContent" name="resContent" cols="90" rows="10" disabled value="">{{restaurant.restaurant_content}}</textarea>
-                </div>
-                <div class="input-group">
-                    <span class="input-group-addon" id="sizing-addon2">장소 키워드</span>
-                    <input id="resLoc" name="resLoc" type="text" class="form-control" disabled value="{{restaurant.restaurant_keyword}}">
-                </div>
-                <a href ="/" class="resAddBtn btn btn-info" role="button">홈으로</a>
-                <a href ="./updatePage/{{restaurant.id}}" class="resAddBtn btn btn-danger" role="button">수정하기</a>
-            </div>
+            </form>
         </div>
         <div class="panel-footer">
             실전예제로 배우는 Django. Project1-TodoList
